[gd_scene load_steps=15 format=3 uid="uid://cqxtc6fkyicnd"]

[ext_resource type="PackedScene" uid="uid://bcdj31cplynon" path="res://scenes/clicker_button.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://dqniknguuup5k" path="res://scripts/ui/main.gd" id="1_tbgi4"]
[ext_resource type="LabelSettings" uid="uid://b64bdumv2qjo3" path="res://assets/label_settings_title.tres" id="2_sugp2"]
[ext_resource type="LabelSettings" uid="uid://cmcjc36abu7hj" path="res://assets/label_settings_description.tres" id="3_85g3d"]
[ext_resource type="PackedScene" uid="uid://ggpc7opdy8l6" path="res://scenes/sidemenu_generator.tscn" id="4_jyhfs"]
[ext_resource type="StyleBox" uid="uid://cb6vdwcly8a7y" path="res://assets/style_box_flat_panel.tres" id="4_tefeu"]
[ext_resource type="Texture2D" uid="uid://b7ks2sc0w81nh" path="res://icon.svg" id="6_tefeu"]
[ext_resource type="Texture2D" uid="uid://c38pvrqw2snmq" path="res://assets/upgrade.svg" id="6_tipki"]
[ext_resource type="Texture2D" uid="uid://tohgml2gkk1g" path="res://assets/generator.svg" id="7_85g3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
content_margin_top = 54.0
content_margin_bottom = 54.0
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0.25098, 0.25098, 0.25098, 0.501961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6xl0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tipki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_85g3d"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbgi4")

[node name="GameBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.392157, 0.352941, 0.627451, 1)

[node name="ClickerControl" type="Control" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1200.0
size_flags_horizontal = 3
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="ClickerControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 14.0
offset_right = 8.0
offset_bottom = 53.0
grow_horizontal = 2
text = "0"
label_settings = ExtResource("2_sugp2")

[node name="IncomeLabel" type="Label" parent="ClickerControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 55.0
offset_right = 8.0
offset_bottom = 94.0
grow_horizontal = 2
text = "0"
label_settings = ExtResource("3_85g3d")

[node name="ClickerButton" parent="ClickerControl" instance=ExtResource("1_o5qli")]
layout_mode = 1
mouse_default_cursor_shape = 2
action_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SideMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_tefeu")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SideMenu"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="CanvasLayer/SideMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_choun")
text = "Upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Control" parent="CanvasLayer/SideMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeControl" parent="CanvasLayer/SideMenu/VBoxContainer/Menu" instance=ExtResource("4_jyhfs")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 4.0
offset_right = 600.0
offset_bottom = 917.0

[node name="TabBar" type="MarginContainer" parent="CanvasLayer/SideMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 112)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeButton" type="PanelContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/UpgradeButton"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/UpgradeButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_tipki")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/UpgradeButton"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_o6xl0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tipki")
theme_override_styles/normal = SubResource("StyleBoxEmpty_85g3d")

[node name="GeneratorButton" type="PanelContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/GeneratorButton"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/GeneratorButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_85g3d")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/GeneratorButton"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_o6xl0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tipki")
theme_override_styles/normal = SubResource("StyleBoxEmpty_85g3d")

[node name="SomethingButtonContainer3" type="PanelContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/SomethingButtonContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/SomethingButtonContainer3/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_tefeu")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="CanvasLayer/SideMenu/VBoxContainer/TabBar/HBoxContainer/SomethingButtonContainer3"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_o6xl0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tipki")
theme_override_styles/normal = SubResource("StyleBoxEmpty_85g3d")
